--- a/templates/includes/language_selector.html
+++ b/templates/includes/language_selector.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% get_language_info_list for LANGUAGES as languages %}
 {% if settings.USE_MODELTRANSLATION and languages|length > 1 %}
-<div>
+<div style="display: none;">
   <form action="{% url "set_language" %}" method="post" id="language_selector_form" hidden="true">
     {% csrf_token %}
       <div class="select">
