--- a/festival/static/scss/base/_layout.scss
+++ b/festival/static/scss/base/_layout.scss
@@ -36,10 +36,12 @@
 
 .aside {
   display: block;
+  background: #fff;
+  padding: 1rem .5rem;
+  margin-bottom: 3rem;
   @media (min-width : $desktop ) {
     float: left;
     width: 30%;
-    padding: 0 .5rem;
   }
 }
 
