--- a/app/festival/static/css/index.css
+++ b/app/festival/static/css/index.css
@@ -797,6 +797,9 @@ pre > p {
 /* line 37, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_layout.scss */
 .aside {
   display: block;
+  background: #fff;
+  padding: 1rem .5rem;
+  margin-bottom: 3rem;
 }
 
 /**
@@ -963,7 +966,6 @@ input:not([type]):focus,
 select[multiple=multiple]:focus,
 textarea:focus {
   border-color: #798d8f;
-  border-left: 0.33333rem solid #e8ca88;
   box-shadow: 0;
   outline: none;
 }
@@ -2700,20 +2702,26 @@ th {
 /* line 6, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/event-card.scss */
 .event__name {
   margin: 0 0 1rem;
+  font-size: 1.2rem;
 }
 
-/* line 10, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/event-card.scss */
+/* line 11, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/event-card.scss */
+.event__description {
+  padding-bottom: 1em;
+  border-bottom: 1px solid #bdc3c7;
+  margin-bottom: 1em;
+}
+
+/* line 17, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/event-card.scss */
 .event__meta {
   display: inline-block;
   *display: inline;
   *zoom: 1;
   text-align: right;
-  padding: .3rem;
-  border: 1px solid #ecf0f1;
-  color: black;
+  font-family: "Interstate", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-/* line 20, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/event-card.scss */
+/* line 28, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/event-card.scss */
 .event__meta:before {
   content: '\f041';
   font-family: "Font-Awesome";
@@ -2723,7 +2731,14 @@ th {
   vertical-align: middle;
   margin-right: .6rem;
   font-size: 2rem;
-  color: #d7a433;
+  color: rgba(232, 202, 136, 0.5);
+}
+
+/* line 41, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/event-card.scss */
+.event__detail,
+.event__detail a {
+  text-align: right;
+  color: #555;
 }
 
 /* line 5, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/hero-slider.scss */
@@ -2739,7 +2754,7 @@ th {
 .user__panel {
   margin: 1rem auto;
   padding: .5rem 1rem;
-  background: #fff;
+  background: #f9f0dd;
 }
 @media (min-width: 769px) {/* line 140, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_forms.scss */
   .sticked-form {
@@ -2798,7 +2813,6 @@ th {
   .aside {
     float: left;
     width: 30%;
-    padding: 0 .5rem;
   }/* line 149, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_forms.scss */
   .sticked-form input {
     width: 60%;
