--- a/festival/static/scss/components/_menu-toggle.scss
+++ b/festival/static/scss/components/_menu-toggle.scss
@@ -18,7 +18,8 @@
   @media (min-width : $desktop ) {
       display: none;
   }
-  &:hover {
+  &:hover,
+  &:focus {
     background: #fff;
   }
 }
